--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,56 +3,72 @@
 $primary: #F9AB00;
 $secondary: #F28A1D;
 $dark: #212427;
-$light:#F5F5F7;
-$color-contrast-light: $dark;   
+$light: #F5F5F7;
+$gray-400: #c5c5c5;
+$color-contrast-light: $dark;
 $headings-color: $dark;
-$body-color:#6a6a6a;
+$body-color: #6a6a6a;
+$transparent: transparent;
 
-$font-weight-base:300;
-$font-size-base:0.9rem;
+$dropdown-bg: $light;
+$dropdown-border-radius: 12px;
+$dropdown-border-color: $transparent;
+$dropdown-padding-y: 1.5rem;
+
+$dropdown-link-hover-bg: $light;
+
+$dropdown-item-padding-x: 1.5rem;
+
+$offcanvas-horizontal-width: 15rem;
+$offcanvas-bg-color: $dark;
+
+
+$font-weight-base: 300;
+$font-size-base: 0.9rem;
 
 /*Button Customization*/
 
-$btn-border-width:2px;
+$btn-border-width: 2px;
 
-$btn-font-weight:600;
+$btn-font-weight: 600;
 
-$btn-border-radius:48px;
-$btn-border-radius-lg:48px;
+$btn-border-radius: 48px;
+$btn-border-radius-lg: 48px;
 
-$input-btn-font-size-lg:16px;
-$input-btn-font-size:12px;
+$input-btn-font-size-lg: 16px;
+$input-btn-font-size: 12px;
 
-$btn-hover-bg-shade-amount:0;
-$btn-hover-border-shade-amount:0;
+$btn-hover-bg-shade-amount: 0;
+$btn-hover-border-shade-amount: 0;
 
 /*Header Customization*/
 
-$headings-font-weight:600;
+$headings-font-weight: 600;
 
-$h1-font-size:3.5rem;
-$h2-font-size:2rem;
-$h3-font-size:1.5rem;
-$h4-font-size:1.125rem;
+$h1-font-size: 3.5rem;
+$h2-font-size: 2rem;
+$h3-font-size: 1.5rem;
+$h4-font-size: 1.125rem;
 
 /*Font*/
 $font-family-base: "Poppins";
 
 /*Navbar */
-$navbar-padding-x:1rem;
-$navbar-padding-y:0.8rem;
+$navbar-padding-x: 1rem;
+$navbar-padding-y: 0.8rem;
 
 /*Anchor Links*/
-$link-color:$body-color;
-$link-decoration:none;
-$link-hover-color:$primary;
+$link-color: $body-color;
+$link-decoration: none;
+$link-hover-color: $primary;
 
 /*Adding New Custom Values inside map*/
 
 @import "../node_modules/bootstrap/scss/functions";
 @import "../node_modules/bootstrap/scss/variables";
 
-$position-values:map-merge($position-values, (5rem: 5rem,) );
+$position-values: map-merge($position-values, (5rem: 0rem, ));
+$theme-colors: map-merge($theme-colors , ("custom-gray": #c5c5c5));
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 
@@ -60,32 +76,50 @@ $position-values:map-merge($position-values, (5rem: 5rem,) );
 
 /*Custom CSS*/
 
-.btn-primary:hover{
+.btn-primary:hover {
     background-color: $secondary;
     color: $dark;
     border-color: $secondary;
 }
-.btn-secondary:hover{
+
+.btn-secondary:hover {
     background-color: $dark;
     color: white;
     border-color: $dark;
 }
-.h1{
+
+.h1 {
     font-weight: 800;
 }
-.h3{
+
+.h3 {
     font-weight: 700;
 }
+.home-icon{
+    filter: brightness(0) saturate(100%) invert(78%) sepia(0%) saturate(95%) hue-rotate(91deg) brightness(90%) contrast(87%);
+}
+.sidebar-li:hover > a{
+    color: $primary !important;
+    transition: color 0.5s linear !important;
 
-/*Pointer*/
-.cursor-pointer{
-    cursor:pointer;
 }
-a:hover{
-    transition: color 0.3s linear;
-}
-.nav-anchor:hover>img{
+.sidebar-li:hover > a > img{
     filter: brightness(0) saturate(100%) invert(69%) sepia(49%) saturate(3097%) hue-rotate(4deg) brightness(101%) contrast(102%);
-    transform: rotate(-180deg);
-    transition: transform 0.3s linear;
+    transition: filter 0.5s linear;
 }
+
+// .nav-item:hover>a>img,
+// .nav-item:hover>a {
+//     filter: brightness(0) saturate(100%) invert(69%) sepia(49%) saturate(3097%) hue-rotate(4deg) brightness(101%) contrast(102%);
+//     transform: rotate(-180deg);
+//     transition: transform 0.3s linear;
+//     color: $primary;
+// }
+
+// .nav-item:hover>.coupon-theme-dropdown {
+//     display: block !important;
+// }
+
+// .coupon-theme-dropdown:hover {
+//     display: block !important;
+// }
