--- a/sass/main.scss
+++ b/sass/main.scss
@@ -43,8 +43,8 @@ $input-btn-font-size: 12px;
 $btn-hover-bg-shade-amount: 0;
 $btn-hover-border-shade-amount: 0;
 
-$rfs-breakpoint:576px;
-$rfs-factor:75;
+$rfs-breakpoint: 576px;
+$rfs-factor: 10;
 
 /*Header Customization*/
 
@@ -73,7 +73,10 @@ $carousel-indicator-active-bg: $primary;
 $carousel-indicator-width: 14px;
 $carousel-indicator-height: 8px;
 
-$rfs-base-value:0px;
+$rfs-base-value: 0px;
+
+$enable-negative-margins: true;
+
 
 
 /*Adding New Custom Values inside map*/
@@ -83,147 +86,151 @@ $rfs-base-value:0px;
 
 
 $custom-colors: (
-    "custom-gray": #c5c5c5,
-    "custom-white": #ffffff
+  "custom-gray": #c5c5c5,
+  "custom-white": #ffffff,
+  "custom-dark-gray": #6a6a6a,
+  "custom-pink": #FCF2EB,
+  "custom-off-white":#fefefe
 );
 $theme-colors: map-merge($theme-colors, $custom-colors);
 
-$position-values: map-merge($position-values, (5rem: 0rem, 1rem:7rem,9rem:9rem));
-$spacers: map-merge($spacers, (6p: 6%,10p: 10%,90:90%));
-$font-sizes: map-merge($font-sizes , ("7": $font-size-base * 0.75,"xl":1.2rem));
+$position-values: map-merge($position-values, (2rem: 2.8rem, 1rem:1rem, 9rem:9rem, 10:10%, 15:30%));
+$spacers: map-merge($spacers, (6p: 6%, 10p: 10%, 90:90%, 5rem:5rem, 4rem:4rem, 8rem: 8rem));
+$font-sizes: map-merge($font-sizes , ("7": $font-size-base * 0.75, "half-rem":0.5rem, "2rem":2rem, "xl":1.2rem));
 
 @import "../node_modules/bootstrap/scss/maps";
 @import "../node_modules/bootstrap/scss/utilities";
 
-$utilities: map-merge(
-  $utilities, (
-    "width": map-merge(
-      map-get($utilities, "width"),
-      ( responsive: true ),
-    ),
-    "max-width": map-merge(
-      map-get($utilities, "max-width"),
-      ( responsive: true ),
-    ),
-    "font-size": map-merge(
-      map-get($utilities, "font-size"),
-      ( responsive: true ),
-    ),
-  )
-);
+$utilities: map-merge($utilities, ("width": map-merge(map-get($utilities, "width"),
+        (responsive: true),
+      ),
+      "max-width": map-merge(map-get($utilities, "max-width"),
+        (responsive: true),
+      ),
+      "font-size": map-merge(map-get($utilities, "font-size"),
+        (responsive: true),
+      ),
+      "translate-middle": map-merge(map-get($utilities, "translate-middle"),
+        (responsive: true),
+      ),
+    ));
 
-$utilities: map-merge(
-  $utilities,
-  (
-    "width": map-merge(
-      map-get($utilities, "width"),
-      (
-        values: map-merge(
-          map-get(map-get($utilities, "width"), "values"),
-          (93: 93%,85: 85%),
+$utilities: map-merge($utilities,
+    ("width": map-merge(map-get($utilities, "width"),
+        (values: map-merge(map-get(map-get($utilities, "width"), "values"),
+            (40:40%, 45:49%, 60: 60%, 70:70%, 85: 85%, 93: 93%, 90: 90%, 95: 98%, 90px:90px, 80rem:80rem, 93vw:93vw),
+          ),
         ),
       ),
-    ),
-    "max-width": map-merge(
-      map-get($utilities, "max-width"),
-      (
-        values: map-merge(
-          map-get(map-get($utilities, "max-width"), "values"),
-          (30rem:30rem,46rem: 46rem),
+      "max-width": map-merge(map-get($utilities, "max-width"),
+        (values: map-merge(map-get(map-get($utilities, "max-width"), "values"),
+            (9rem:9rem, 12rem:12rem, 15rem:15rem, 16rem:16rem, 20rem:20rem, 30rem:30rem, 33rem:33rem, 40rem:40rem, 46rem: 46rem, 59rem:59rem),
+          ),
         ),
-      ),
-    )
-  )
-);
+      )));
 
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 
 
+
 /*Custom CSS*/
 
 .btn-primary:hover {
-    background-color: $secondary;
-    color: $dark;
-    border-color: $secondary;
+  background-color: $secondary;
+  color: $dark;
+  border-color: $secondary;
 }
 
 .btn-secondary:hover {
-    background-color: $dark;
-    color: white;
-    border-color: $dark;
+  background-color: $dark;
+  color: white;
+  border-color: $dark;
 }
 
 .h1 {
-    font-weight: 800;
+  font-weight: 800;
 }
 
 .h3 {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 .home-icon {
-    filter: brightness(0) saturate(100%) invert(78%) sepia(0%) saturate(95%) hue-rotate(91deg) brightness(90%) contrast(87%);
+  filter: brightness(0) saturate(100%) invert(78%) sepia(0%) saturate(95%) hue-rotate(91deg) brightness(90%) contrast(87%);
 }
 
 .sidebar-li:hover>a {
-    color: $primary !important;
-    transition: color 0.5s linear !important;
+  color: $primary !important;
+  transition: color 0.5s linear !important;
 
 }
 
 .sidebar-li:hover>a>img,
 .dropdown-item:hover>a>img,
 .dropdown-item:hover>a {
-    filter: brightness(0) saturate(100%) invert(69%) sepia(49%) saturate(3097%) hue-rotate(4deg) brightness(101%) contrast(102%);
-    transition: filter 0.2s linear;
+  filter: brightness(0) saturate(100%) invert(69%) sepia(49%) saturate(3097%) hue-rotate(4deg) brightness(101%) contrast(102%);
+  transition: filter 0.2s linear;
 }
 
 .nav-item:hover>a>img,
 .nav-item:hover>a {
-    filter: brightness(0) saturate(100%) invert(69%) sepia(49%) saturate(3097%) hue-rotate(4deg) brightness(101%) contrast(102%);
-    transform: rotate(-180deg);
-    transition: transform 0.3s linear;
-    color: $primary;
+  filter: brightness(0) saturate(100%) invert(69%) sepia(49%) saturate(3097%) hue-rotate(4deg) brightness(101%) contrast(102%);
+  transform: rotate(-180deg);
+  transition: transform 0.3s linear;
+  color: $primary;
 }
 
 .nav-item:hover>.dropdown-menu {
-    display: block !important;
+  display: block !important;
 }
 
 .dropdown-menu:hover {
-    display: block !important;
+  display: block !important;
 }
 
-// .carousel-text {
-//     width: 85%;
-//     max-width: 30rem;
-// }
-
 .glassmorphism-text-div {
-    background: rgba(255, 255, 255, 0.3);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    backdrop-filter: blur(10.5px);
-    -webkit-backdrop-filter: blur(10.5px);
-    border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
-    width: 40%;
-    max-width: 20rem;
-    @media screen and (min-width:576px) {
-        width: 20rem;
-    }
+  background: rgba(255, 255, 255, 0.3);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(10.5px);
+  -webkit-backdrop-filter: blur(10.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  width: 40%;
+  max-width: 20rem;
+
+  @media screen and (min-width:576px) {
+    width: 20rem;
+  }
 }
 
 .carousel-indicators>[data-bs-target] {
-    border: solid 1px transparent;
-    border-radius: 12px;
+  border: solid 1px transparent;
+  border-radius: 12px;
 }
-.carousel-indicators>.active{
-    width: 1.5rem;
+
+.carousel-indicators>.active {
+  width: 1.5rem;
 }
-.outline-custom-btn:hover{
-    color: $primary;
+
+.outline-custom-btn:hover {
+  color: $primary;
 }
-.outline-custom-btn:hover>img{
-    filter: brightness(0) saturate(100%) invert(69%) sepia(49%) saturate(3097%) hue-rotate(4deg) brightness(101%) contrast(102%);
-}   
+
+.outline-custom-btn:hover>img {
+  filter: brightness(0) saturate(100%) invert(69%) sepia(49%) saturate(3097%) hue-rotate(4deg) brightness(101%) contrast(102%);
+}
+
+.col {
+  -webkit-box-shadow: 16px 21px 87px -36px rgba(112, 112, 112, 1);
+  -moz-box-shadow: 16px 21px 87px -36px rgba(112, 112, 112, 1);
+  box-shadow: 16px 21px 87px -36px rgba(112, 112, 112, 1);
+}
+
+.col:hover {
+  @media screen and (min-width:990px) {
+    transform: scale(1.1, 1.1);
+    transition: transform 0.3s linear;
+
+  }
+}
